<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.skrundz.buzzerapp.MultiplayerActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople2"
        android:id="@+id/player2Button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="on2Players"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople3"
        android:id="@+id/player3Button"
        android:layout_below="@+id/player2Button"
        android:layout_alignParentStart="true"
        android:onClick="on3Players"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numPeople4"
        android:id="@+id/player4Button"
        android:layout_below="@+id/player3Button"
        android:layout_alignParentStart="true"
        android:onClick="on4Players"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
