<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".mainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player"
        android:id="@+id/playAloneButton"
        android:textAllCaps="false"
        android:onClick="onPlayAlone"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multi_player"
        android:id="@+id/playWithFriendsButton"
        android:textAllCaps="false"
        android:onClick="onPlayWithFriends"
        android:layout_below="@+id/playAloneButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:id="@+id/statsButton"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="onViewStats"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
